# NKFrameworkDecomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STYLE_GUIDE.md
NewFramework/AdServer/: AdInterface.cpp  AdInterface.h
NewFramework/AdServer/Android/IronSource/: IronSource.cpp  IronSource.h
NewFramework/AdServer/Android/Tapjoy/: Tapjoy.cpp  Tapjoy.h
NewFramework/AdServer/iOS/IronSource/: IronSource.h
NewFramework/Analytics/: DGAnalytics.cpp  DGAnalytics.h  DGAnalyticsData.cpp  DGAnalyticsData.h  DGAnalyticsEventGroups.cpp  DGAnalyticsEventGroups.h  IAnalytics.h  SAnalyticsInitialisation.h
NewFramework/BaseApplication/: BasePointers.cpp  BasePointers.h  LegacyFeatures.cpp  LegacyFeatures.h
NewFramework/BaseApplication/AppClass/: AppClass.cpp  AppClass.h  NKApplication.cpp  NKApplication.h  NKSDKApp.h
NewFramework/BaseApplication/LegacyFeatures/: LegacyFeatures.cpp  LegacyFeatures.h
NewFramework/BaseApplication/Screens/: ScreenData.h
NewFramework/BaseApplication/Screens/BaseScreen/: BaseScreen.cpp  BaseScreen.h
NewFramework/Console/: ConsoleVariable.cpp  ConsoleVariable.h
NewFramework/Events/: EventManager.cpp  EventManager.h  Observer.h
NewFramework/Graphics/: Texture.cpp  Texture.h
NewFramework/Graphics/Font/: CharacterInfo.h  Font.cpp  Font.h  FontDefinition.h  FontImporter.h  FontManager.cpp  FontManager.h  XmlFontImporter.cpp  XmlFontImporter.h
NewFramework/Graphics/Management/: TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h
NewFramework/Graphics/Management/JPEG/: JPEGTextures.cpp  JPEGTextures.h
NewFramework/Graphics/Management/JPNG/: JPNGTextures.cpp  JPNGTextures.h
NewFramework/Graphics/Management/PVR/: PVRTextures.cpp  PVRTextures.h
NewFramework/Graphics/Objects/: BasePositionableObject.cpp  BasePositionableObject.h
NewFramework/Graphics/Render/: RenderSystem.h
NewFramework/IO/File/: BaseFileIO.cpp  BaseFileIO.h  FilePlatformData.h  FilePolicy.cpp  FilePolicy.h  IFile.h  PNGInMemory.cpp  PNGInMemory.h
NewFramework/Math/: Maths.h  Matrix.cpp  Matrix.h
NewFramework/Math/MathematicTypes/: VectorDataStructures.cpp  VectorDataStructures.h
NewFramework/Networking/NKAPI/: NKCrossPromo.cpp  NKCrossPromo.h  NKEndpoints.cpp  NKEndpoints.h  NKEnums.cpp  NKEnums.h  NKError.cpp  NKError.h  NKFileClient.cpp  NKFileClient.h  NKManager.cpp  NKManager.h  NKMessage.h  NKModules.cpp  NKModules.h  NKSession.cpp  NKSession.h  NKSignature.cpp  NKSignature.h
NewFramework/Networking/NKAPI/Impl/: NKFileClientImpl.cpp  NKFileClientImpl.h  NKMessages.cpp  NKMessages.h  NKSessionImpl.cpp  NKSessionImpl.h
NewFramework/Networking/NKAPI/Impl/FileClientActions/: NKAction_AppendFileSavePath.cpp  NKAction_AppendFileSavePath.h  NKAction_DownloadFile.cpp  NKAction_DownloadFile.h  NKAction_FileConflict.cpp  NKAction_FileConflict.h  NKAction_FileWebRequest.cpp  NKAction_FileWebRequest.h  NKAction_UploadFile.cpp  NKAction_UploadFile.h
NewFramework/Networking/NKAPI/Impl/SessionActions/: NKAction_AuthenticateService.cpp  NKAction_AuthenticateService.h  NKAction_CacheSession.cpp  NKAction_CacheSession.h  NKAction_CheckErrorType.cpp  NKAction_CheckErrorType.h  NKAction_CheckLoginServiceType.cpp  NKAction_CheckLoginServiceType.h  NKAction_CheckOnline.cpp  NKAction_CheckOnline.h  NKAction_CheckServiceActionType.cpp  NKAction_CheckServiceActionType.h  NKAction_ClearSession.cpp  NKAction_ClearSession.h  NKAction_GetUser.cpp  NKAction_GetUser.h  NKAction_HideWebView.cpp  NKAction_HideWebView.h  NKAction_IsServiceAuthenticated.cpp  NKAction_IsServiceAuthenticated.h  NKAction_OpenSessionUsingToken.cpp  NKAction_OpenSessionUsingToken.h  NKAction_ReportErrorCallback.cpp  NKAction_ReportErrorCallback.h  NKAction_ServiceAction.cpp  NKAction_ServiceAction.h  NKAction_SessionHttpRequest.cpp  NKAction_SessionHttpRequest.h  NKAction_SetError.cpp  NKAction_SetError.h  NKAction_ShowWebView.cpp  NKAction_ShowWebView.h  NKAction_StoreStateCallback.cpp  NKAction_StoreStateCallback.h  NKAction_WebViewErrorToolTip.cpp  NKAction_WebViewErrorToolTip.h  NKAction_WebviewRequestListener.cpp  NKAction_WebviewRequestListener.h
NewFramework/Networking/NKAPI/Modules/: NKModule.cpp  NKModule.h  NKModuleUtility.cpp  NKModuleUtility.h
NewFramework/Networking/Protocols/HTTP/: HttpCallbackFunctor.cpp  HttpCallbackFunctor.h  HttpRequest.cpp  HttpRequest.h  IHttpCallback.h  IHttpRequestManager.h
NewFramework/Platform/OSX/: OSXCore.mm
NewFramework/Platform/Shared/: Assert.cpp  Assert.h  Core.cpp  Core.h  Logging.cpp  Logging.h  LoggingComponent.h
NewFramework/Platform/iOS/: File.cpp  File.h  OSXCore.mm
NewFramework/Utilities/: Bitmask.h  Encoding.cpp  Encoding.h  HashHelper.cpp  HashHelper.h  StringHelper.cpp  StringHelper.h  URLParser.cpp  URLParser.h  Utilities.cpp  Utilities.h
NewFramework/Utilities/JSON/: JSONWrapper.cpp  JSONWrapper.h
NewFramework/Utilities/JSON/JSON_PropertyReader/: JSON_Read.cpp  JSON_Read.h
NewFramework/Utilities/Json/Json_PropertyReader/: JSON_PropertyException.h  JSON_Read.cpp  JSON_Read.h
NewFramework/Utilities/Misc/: AssetBag.cpp  AssetBag.h
Uncategorized/: BehaviourTree.cpp  BehaviourTree.h  Blackboards.h  Encryption.cpp  Encryption.h  GlobalVariables.cpp  GlobalVariables.h  NKLoginQuery.h  NKLoginService.cpp  NKLoginService.h  NKLoginWebview.cpp  NKLoginWebview.h  NKRequestFactory.cpp  NKRequestFactory.h  ProfanityFilter.cpp  ProfanityFilter.h  RGBA.cpp  RGBA.h  ReferenceCounted.h  SpriteInformation.cpp  SpriteInformation.h  StephenEncryption.cpp  StephenEncryption.h  StringHelper.cpp  StringHelper.h  StuffToRefactor.h  Version.cpp  Version.h  types.h
